update 'help needed' stuff

--- a/_includes/content-label-banner.html
+++ b/_includes/content-label-banner.html
@@ -1,4 +1,4 @@
 <div class="alert alert-warning">
-  <strong> This section is not ready. </strong>
-  You can help us by <a href="https://github.com/developer-portal/content/blob/master/{{page.dir}}/{{page.name}}">editing this page</a>.
+  <strong> This page is not ready. </strong>
+  You can <a href="http://developer-portal.github.io/contributing/"> learn how to contribute </a> and help us by writing content.
 </div>
