--- a/_includes/contribute.html
+++ b/_includes/contribute.html
@@ -2,6 +2,6 @@
   <div class="container">
     <h2> Share your knowledge </h2>
     <p> Fedora Developer Portal is a community effort to share guides and information about open-source development. And we need your help! </p>
-    <a href="https://github.com/developer-portal/content" class="btn btn-primary">Contribute content</a>
+    <a href="http://developer-portal.github.io/contributing/" class="btn btn-primary">Learn how to contribute</a>
   </div>
 </div>
