[major change] change 'page' to 'subsection' in all YAML headers

--- a/_includes/content-link-panel.html
+++ b/_includes/content-link-panel.html
@@ -4,7 +4,7 @@
       <div class="panel-body">
         <div class="media">
           <div class="media-left">
-            <img style="height:100px" src="{{ p.page | page_logo }}">
+            <img style="height:100px" src="{{ p.subsection | subsection_logo }}">
           </div>
           <div class="media-body">
             <h3>
