--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -19,14 +19,14 @@
           <div class="list-group content-menu">
             {% assign sorted_pages = site.pages | sort: "order" %}
             {% for p in sorted_pages %}
-              {% if p.page == page.page %}
+              {% if p.subsection == page.subsection %}
                 {% if p.section %}
                 <a href="{{p.url}}" class="list-group-item {% if p.url == page.url %} active {% endif %}">{{ p.title }}</a>
                 {% endif %}
               {% endif %}
             {% endfor %}
             {% for p in sorted_pages %}
-              {% if p.page == page.page %}
+              {% if p.subsection == page.subsection %}
                 {% if p.section %}{% else %}
                 <a href="{{p.url}}" class="list-group-item {% if p.url == page.url %} active {% endif %}">{{ p.title }}</a>
                 {% endif %}
