Issue #32 is corrected as shown in the solution

--- a/_includes/content-link-panel.html
+++ b/_includes/content-link-panel.html
@@ -6,7 +6,7 @@
           <div class="media-left">
             <img style="height:100px" src="{{ p.subsection | subsection_logo }}">
           </div>
-          <div class="media-body">
+          <div class="media-body customized">
             <h3>
               {{ p.title }}
             </h3>
