dynamically calculate copyright year

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -73,7 +73,7 @@
           <div class="widget-body">
             <p class="sponsor">Fedora is sponsored by Red Hat.</p>
             <p class="sponsor"><a href="//www.redhat.com/en/technologies/linux-platforms/articles/relationship-between-fedora-and-rhel">Learn more about the relationship between Red Hat and Fedora »</a></p>
-            <p class="copy">&copy; 2015 Red Hat, Inc. and others.</p>
+	    <p class="copy">&copy; {{ site.time | date: '%Y' }} Red Hat, Inc. and others.</p>
           </div>
         </div>
         <!-- /row of widgets -->
