Update footer links for Fedora 25

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,8 +45,8 @@
               <dd><a href="//fedoraproject.org/wiki/Communicating_and_getting_help">Get Help</a></dd>
               <dd><a href="//ask.fedoraproject.org/">Ask Fedora</a></dd>
               <dd><a href="http://fedoraforum.org/">Forums</a></dd>
-              <dd><a href="//fedoraproject.org/wiki/Common_bugs">Common Bugs</a></dd>
-              <dd><a href="//docs.fedoraproject.org/en-US/Fedora/24/html/Installation_Guide">Installation Guide</a></dd>
+              <dd><a href="//fedoraproject.org/wiki/Common_F25_bugs">Common Bugs</a></dd>
+              <dd><a href="//docs.fedoraproject.org/en-US/Fedora/25/html/Installation_Guide">Installation Guide</a></dd>
             </dl>
           </div>
         </div>
