--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,20 +6,20 @@
         <div class="widget-body">
           <dl>
             <dd><a href="/about.html">About Developer Portal</a></dd>
-            <dd><a href="//getfedora.org/en/sponsors">About Fedora</a></dd>
-            <dd><a href="//getfedora.org/en/sponsors">Sponsors</a></dd>
-            <dd><a href="http://fedoramagazine.org">Fedora Magazine</a></dd>
-            <dd><a href="//fedoraproject.org/wiki/Legal:Main#Legal">Legal</a></dd>
+            <dd><a href="https://getfedora.org/en/sponsors">About Fedora</a></dd>
+            <dd><a href="https://getfedora.org/en/sponsors">Sponsors</a></dd>
+            <dd><a href="https://fedoramagazine.org">Fedora Magazine</a></dd>
+            <dd><a href="https://fedoraproject.org/wiki/Legal:Main#Legal">Legal</a></dd>
           </dl>
           <ul class="list-inline">
             <li>
-              <a class="btn-social btn-outline" href="//www.facebook.com/TheFedoraProject"><i class="fa fa-fw fa-facebook"></i></a>
+              <a class="btn-social btn-outline" href="https://www.facebook.com/TheFedoraProject"><i class="fa fa-fw fa-facebook"></i></a>
             </li>
             <li>
-              <a class="btn-social btn-outline" href="//plus.google.com/112917221531140868607"><i class="fa fa-fw fa-google-plus"></i></a>
+              <a class="btn-social btn-outline" href="https://plus.google.com/112917221531140868607"><i class="fa fa-fw fa-google-plus"></i></a>
             </li>
             <li>
-              <a class="btn-social btn-outline" href="//twitter.com/fedora"><i class="fa fa-fw fa-twitter"></i></a>
+              <a class="btn-social btn-outline" href="https://twitter.com/fedora"><i class="fa fa-fw fa-twitter"></i></a>
             </li>
           </ul>
         </div>
@@ -28,13 +28,13 @@
         <h3 class="widget-title uppercase">Download</h3>
         <div class="widget-body">
           <dl>
-            <dd><a href="//getfedora.org/en/workstation/download">Get Fedora Workstation</a></dd>
-            <dd><a href="//getfedora.org/en/server/download">Get Fedora Server</a></dd>
-            <dd><a href="//getfedora.org/en/cloud/download">Get Fedora Cloud</a></dd>
-            <dd><a href="//spins.fedoraproject.org">Fedora Spins</a></dd>
-            <dd><a href="//labs.fedoraproject.org">Fedora Labs</a></dd>
-            <dd><a href="//arm.fedoraproject.org">Fedora ARM<span class="sup">&reg;</span></a></dd>
-            <dd><a href="http://torrents.fedoraproject.org">Torrent Downloads</a></dd>
+            <dd><a href="https://getfedora.org/en/workstation/download/">Get Fedora Workstation</a></dd>
+            <dd><a href="https://getfedora.org/en/server/download/">Get Fedora Server</a></dd>
+            <dd><a href="https://alt.fedoraproject.org/en/cloud/">Get Fedora Cloud</a></dd>
+            <dd><a href="https://spins.fedoraproject.org">Fedora Spins</a></dd>
+            <dd><a href="https://labs.fedoraproject.org">Fedora Labs</a></dd>
+            <dd><a href="https://arm.fedoraproject.org">Fedora ARM<span class="sup">&reg;</span></a></dd>
+            <dd><a href="https://torrents.fedoraproject.org">Torrent Downloads</a></dd>
           </dl>
         </div>
       </div>
@@ -42,11 +42,11 @@
         <h3 class="widget-title">Support</h3>
           <div class="widget-body">
             <dl>
-              <dd><a href="//fedoraproject.org/wiki/Communicating_and_getting_help">Get Help</a></dd>
-              <dd><a href="//ask.fedoraproject.org/">Ask Fedora</a></dd>
-              <dd><a href="http://fedoraforum.org/">Forums</a></dd>
-              <dd><a href="//fedoraproject.org/wiki/Common_F25_bugs">Common Bugs</a></dd>
-              <dd><a href="//docs.fedoraproject.org/en-US/Fedora/25/html/Installation_Guide">Installation Guide</a></dd>
+              <dd><a href="https://fedoraproject.org/wiki/Communicating_and_getting_help">Get Help</a></dd>
+              <dd><a href="https://ask.fedoraproject.org/">Ask Fedora</a></dd>
+              <dd><a href="https://fedoraforum.org/">Forums</a></dd>
+              <dd><a href="https://fedoraproject.org/wiki/Common_F25_bugs">Common Bugs</a></dd>
+              <dd><a href="https://docs.fedoraproject.org/en-US/Fedora/25/html/Installation_Guide">Installation Guide</a></dd>
             </dl>
           </div>
         </div>
@@ -54,11 +54,11 @@
           <h3 class="widget-title">Join</h3>
             <div class="widget-body">
             <dl>
-              <dd><a href="//fedoraproject.org/wiki/Join">Join Fedora</a></dd>
+              <dd><a href="https://fedoraproject.org/wiki/Join">Join Fedora</a></dd>
               <dd><a href="http://fedoraplanet.org">Planet Fedora</a></dd>
-              <dd><a href="//fedoraproject.org/wiki/SIGs">Fedora SIGs</a></dd>
-              <dd><a href="//admin.fedoraproject.org/accounts/">Fedora Account System</a></dd>
-              <dd><a href="http://fedoracommunity.org/">Fedora Community</a></dd>
+              <dd><a href="https://fedoraproject.org/wiki/SIGs">Fedora SIGs</a></dd>
+              <dd><a href="https://admin.fedoraproject.org/accounts/">Fedora Account System</a></dd>
+              <dd><a href="https://fedoracommunity.org/">Fedora Community</a></dd>
             </dl>
           </div>
         </div>
@@ -66,13 +66,13 @@
       <div class="row">
         <div class="col-md-2">
           <div class="widget-body">
-            <a href="http://www.redhat.com/"><img alt="Red Hat Logo" src="/static/logo/redhat.png" class="rh-logo"></a>
+            <a href="https://www.redhat.com/"><img alt="Red Hat Logo" src="/static/logo/redhat.png" class="rh-logo"></a>
           </div>
         </div>
         <div class="col-md-7">
           <div class="widget-body">
             <p class="sponsor">Fedora is sponsored by Red Hat.</p>
-            <p class="sponsor"><a href="//www.redhat.com/en/technologies/linux-platforms/articles/relationship-between-fedora-and-rhel">Learn more about the relationship between Red Hat and Fedora »</a></p>
+            <p class="sponsor"><a href="https://www.redhat.com/en/technologies/linux-platforms/articles/relationship-between-fedora-and-rhel">Learn more about the relationship between Red Hat and Fedora »</a></p>
             <p class="copy">&copy; {{ site.time | date: '%Y' }} Red Hat, Inc. and others.</p>
           </div>
         </div>
