--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-  {% include head.html %}
-  <body>
-    {% include announcement.html %}
-
+---
+layout: default
+---
     <!-- The top blue thing -->
     <div id="splash" class="splash-size-large splash-section-homepage">
       <div class="container">
@@ -18,9 +15,5 @@
     </div>
 
     <!-- Some other stuff -->
-
     {% include contribute.html %}
     {% include blog-headlines.html %}
-    {% include footer.html %}
-  </body>
-</html>
