--- a/_layouts/section.html
+++ b/_layouts/section.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-  {% include head.html %}
-  <body>
-    {% include announcement.html %}
-
+---
+layout: default
+---
     <!-- The top blue thing -->
     <div id="splash" class="splash-size-small splash-section-{{ page.category-name }}">
       <div class="container">
@@ -21,6 +18,3 @@
 
     <!-- Some other stuff -->
     {% include contribute.html %}
-    {% include footer.html %}
-  </body>
-</html>
