Remove broken lunr_js_search.

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -31,7 +31,7 @@
 </style>
   {% raw %}
   <script id="search-results-template" type="text/mustache">
-  <h1>Search results</h1>
+  <h1>Search is temporarily disabled</h1>
     {{#entries}}
       <article>
         <h3>
