--- a/_includes/top-nav.html
+++ b/_includes/top-nav.html
@@ -12,7 +12,7 @@
   <div class="col-sm-7" id="menu-col">
     {% include nav.html %}
   </div>
-  <div class="col-sm-3" id="search-col">
+  <div class="col-sm-3" id="search-col" style="display: none;">
     {% include search.html %}
   </div>
 </div>
