Scale content images to fit device size.
Fixes: issue#383

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -242,6 +242,11 @@ div.content-content {
     margin-left: 0px;
     color: #111;
   }
+
+  img {
+    object-fit: scale-down;
+    width: 100%;
+  }
 }
 
 
