--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,7 +47,7 @@
               <dd><a href="https://ask.fedoraproject.org/">Ask Fedora</a></dd>
               <dd><a href="https://fedoraforum.org/">Forums</a></dd>
               <dd><a href="https://fedoraproject.org/wiki/Common_F{{ page.fedora_release }}_bugs">Common Bugs</a></dd>
-              <dd><a href="https://docs.fedoraproject.org/en-US/fedora/f{ site.fedora_release }}/install-guide/">Installation Guide</a></dd>
+              <dd><a href="https://docs.fedoraproject.org/en-US/fedora/f{{ page.fedora_release }}/install-guide/">Installation Guide</a></dd>
             </dl>
           </div>
         </div>
